--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "spacey"
 version = "1.0.0"
 edition = "2021"
+description = "a tiny yet performant whitespace vmm/interpreter"
+license = "GPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
