feat:add wasm bindings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,15 @@ repository = "https://github.com/D3PSI/spacey"
 
 [dev-dependencies]
 criterion = { version = "0.3.5", features = ["html_reports"] }
+wasm-bindgen-test = "0.3.13"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
 
 [dependencies]
 clap = "3.2.5"
-memmap = "0.7.0"
-getch = "0.3.1"
+wasm-bindgen = "0.2.83"
 
 [[bench]]
 name = "interpreter"
@@ -24,3 +28,10 @@ harness = false
 [[bench]]
 name = "parser"
 harness = false
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+memmap = "0.7.0"
+getch = "0.3.1"
