--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,8 @@ repository = "https://github.com/D3PSI/spacey"
 criterion = { version = "0.3.5", features = ["html_reports"] }
 wasm-bindgen-test = "0.3.13"
 
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+#[profile.release]
+#opt-level = "s"
 
 [dependencies]
 clap = "3.2.5"
